--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,10 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#6200EE</color>
-    <color name="colorPrimaryDark">#3700B3</color>
-    <color name="colorAccent">#03DAC5</color>
+    <color name="ic_launcher_background">#5564FF</color>
+
+    <color name="colorPrimary">#0094CF</color>
+    <color name="colorPrimaryDark">#0070AE</color>
+    <color name="colorAccent">#18C9CC</color>
 
     <color name="colorViewCard">#E8EDEF</color>
     <color name="colorBackgroundList">#EDF2F4</color>
+    <color name="color50Transparent">#7F7FFFDF</color>
 
 </resources>
