--- a/app/src/main/res/layout/fragment_splash_screen.xml
+++ b/app/src/main/res/layout/fragment_splash_screen.xml
@@ -1,33 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:adjustViewBounds="false"
-    android:background="@mipmap/coronavirus_covid_icon_back"
-    android:backgroundTint="@color/color50Transparent"
+    android:background="@color/colorBackgroundSplash"
     android:backgroundTintMode="add"
     tools:context=".presentation.fragment.SplashScreenFragment">
 
     <ImageView
         android:id="@+id/splash_icon"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:src="@mipmap/coronavirus_covid_icon_back"
-        app:layout_constraintBottom_toTopOf="@+id/splash_app_name"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
-
-    <TextView
-        android:id="@+id/splash_app_name"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:allowUndo="true"
-        android:text="@string/app_name"
-        android:textColor="@android:color/black"
-        android:textSize="@dimen/app_name_size"
-        android:textStyle="bold"
+        android:layout_width="match_parent"
+        android:layout_height="128dp"
+        android:src="@drawable/covid19_icon"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -42,12 +28,10 @@
         android:layout_marginBottom="32dp"
         android:gravity="end"
         android:text="@string/splash_powered"
-        android:textColor="@android:color/black"
-        android:textSize="@dimen/title_size"
+        android:textSize="@dimen/text_size"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
-
 
 </androidx.constraintlayout.widget.ConstraintLayout>
