--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,12 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="ic_launcher_background">#5564FF</color>
+    <color name="ic_launcher_background">#44C1B0</color>
 
     <color name="colorPrimary">#0094CF</color>
     <color name="colorPrimaryDark">#0070AE</color>
     <color name="colorAccent">#18C9CC</color>
 
     <color name="colorViewCard">#E8EDEF</color>
+    <color name="colorBackgroundSplash">@color/colorBackgroundList</color>
     <color name="colorBackgroundList">#EDF2F4</color>
     <color name="color50Transparent">#7F7FFFDF</color>
 
