--- a/app/src/main/res/menu/menu_list.xml
+++ b/app/src/main/res/menu/menu_list.xml
@@ -13,14 +13,41 @@
 
     <item
         android:id="@+id/menu_sort"
-        android:title="@string/menu_sort"
         android:icon="@drawable/ic_sort_24dp"
-        app:showAsAction="always" />
+        android:title="@string/menu_sort"
+        app:showAsAction="always">
+
+        <menu>
+            <item
+                android:id="@+id/sort_by_name"
+                android:title="@string/menu_sort_by_name"
+                app:showAsAction="never"
+                />
+            <item
+                android:id="@+id/sort_by_confirmed"
+                android:title="@string/menu_sort_by_confirmed"
+                app:showAsAction="never"
+                />
+            <item
+                android:id="@+id/sort_by_deaths"
+                android:title="@string/menu_sort_by_deaths"
+                app:showAsAction="never"
+                />
+            <item
+                android:id="@+id/sort_by_recovered"
+                android:title="@string/menu_sort_by_recovered"
+                app:showAsAction="never"
+                />
+        </menu>
+
+    </item>
 
     <item
         android:id="@+id/menu_help"
         android:title="@string/menu_help"
         app:showAsAction="never"
         />
+
+
 
 </menu>
