--- a/app/src/main/res/layout/viewholder_country.xml
+++ b/app/src/main/res/layout/viewholder_country.xml
@@ -1,17 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
     <androidx.cardview.widget.CardView
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginBottom="8dp"
+        android:layout_margin="4dp"
         app:cardBackgroundColor="@color/colorViewCard"
         app:cardCornerRadius="4dp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -23,55 +20,52 @@
             android:id="@+id/constraintLayout"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:padding="8dp">
-
-            <androidx.cardview.widget.CardView
-                android:id="@+id/viewholder_flag_cardview"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginEnd="8dp"
-                android:layout_marginBottom="24dp"
-                app:cardCornerRadius="32dp"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent">
-
-                <ImageView
-                    android:id="@+id/viewholder_country_flag"
-                    android:src="@drawable/ic_flag_64dp"
-                    android:layout_width="50dp"
-                    android:layout_height="50dp"
-                    android:scaleX="1.6"
-                    android:scaleY="1.6" />
-            </androidx.cardview.widget.CardView>
+            android:padding="4dp">
 
             <TextView
                 android:id="@+id/viewholder_country_name"
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="16dp"
-                android:layout_marginTop="8dp"
                 android:layout_marginEnd="16dp"
                 android:gravity="center"
                 android:text="@string/country_name"
                 android:textColor="@android:color/black"
                 android:textSize="@dimen/title_size"
                 android:textStyle="bold"
-                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintEnd_toStartOf="@+id/viewholder_flag_cardview"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
+
+            <androidx.cardview.widget.CardView
+                android:id="@+id/viewholder_flag_cardview"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:cardCornerRadius="32dp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="parent">
+
+                <ImageView
+                    android:id="@+id/viewholder_country_flag"
+                    android:layout_width="50dp"
+                    android:layout_height="50dp"
+                    android:scaleX="1.6"
+                    android:scaleY="1.6"
+                    android:src="@drawable/ic_flag_64dp" />
+            </androidx.cardview.widget.CardView>
 
             <TextView
                 android:id="@+id/textView3"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="8dp"
-                android:layout_marginTop="8dp"
+                android:layout_marginTop="16dp"
                 android:text="@string/confirmed"
                 android:textColor="@android:color/black"
                 android:textSize="@dimen/text_size"
                 android:textStyle="bold"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/viewholder_country_name" />
+                app:layout_constraintTop_toBottomOf="@+id/viewholder_flag_cardview" />
 
             <TextView
                 android:id="@+id/textView4"
@@ -106,12 +100,12 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="8dp"
-                android:layout_marginTop="8dp"
+                android:layout_marginTop="16dp"
                 android:text="@string/zero"
                 android:textColor="@android:color/black"
                 android:textSize="@dimen/text_size"
                 app:layout_constraintStart_toEndOf="@+id/textView3"
-                app:layout_constraintTop_toBottomOf="@+id/viewholder_country_name" />
+                app:layout_constraintTop_toBottomOf="@+id/viewholder_flag_cardview" />
 
             <TextView
                 android:id="@+id/viewholder_country_total_deaths"
@@ -142,14 +136,14 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="8dp"
-                android:layout_marginTop="8dp"
+                android:layout_marginTop="16dp"
                 android:layout_marginEnd="8dp"
                 android:text="@string/zero"
                 android:textColor="@android:color/holo_orange_dark"
                 android:textSize="@dimen/text_size"
-                app:layout_constraintEnd_toStartOf="@+id/viewholder_flag_cardview"
+                app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toEndOf="@+id/viewholder_country_total_confirmed"
-                app:layout_constraintTop_toBottomOf="@+id/viewholder_country_name" />
+                app:layout_constraintTop_toBottomOf="@+id/viewholder_flag_cardview" />
 
             <TextView
                 android:id="@+id/viewholder_country_new_deaths"
@@ -161,7 +155,7 @@
                 android:text="@string/zero"
                 android:textColor="@android:color/holo_red_dark"
                 android:textSize="@dimen/text_size"
-                app:layout_constraintEnd_toStartOf="@+id/viewholder_flag_cardview"
+                app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toEndOf="@+id/viewholder_country_total_deaths"
                 app:layout_constraintTop_toBottomOf="@+id/viewholder_country_new_confirmed" />
 
@@ -176,7 +170,7 @@
                 android:text="@string/zero"
                 android:textColor="@android:color/holo_green_dark"
                 android:textSize="@dimen/text_size"
-                app:layout_constraintEnd_toStartOf="@+id/viewholder_flag_cardview"
+                app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toEndOf="@+id/viewholder_country_total_recovered"
                 app:layout_constraintTop_toBottomOf="@+id/viewholder_country_new_deaths" />
 
