--- a/app/src/main/res/layout/fragment_country_list.xml
+++ b/app/src/main/res/layout/fragment_country_list.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.swiperefreshlayout.widget.SwipeRefreshLayout
-    android:id="@+id/list_fragment_swipe_refresh_layout"
+<androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -8,10 +7,6 @@
     android:layout_height="match_parent"
     android:background="@color/colorViewCard"
     tools:context=".presentation.fragment.CountryListFragment">
-
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
 
         <include
             android:id="@+id/country_list_appbar"
@@ -31,6 +26,15 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/country_list_appbar" />
 
+    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
+        android:id="@+id/list_fragment_swipe_refresh_layout"
+        android:layout_width="wrap_content"
+        android:layout_height="0dp"
+        app:layout_constraintBottom_toTopOf="@id/country_list_footer"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/country_list_toolbar">
+
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/country_list_recycle_view"
             android:layout_width="match_parent"
@@ -38,10 +42,12 @@
             android:layout_marginStart="2dp"
             android:layout_marginEnd="2dp"
             android:scrollbars="horizontal"
-            app:layout_constraintBottom_toTopOf="@+id/country_list_footer"
+            app:layout_constraintBottom_toTopOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/country_list_toolbar" />
+            app:layout_constraintTop_toBottomOf="parent" />
+
+    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
 
         <ProgressBar
             android:id="@+id/fragment_list_progress_bar"
@@ -49,10 +55,10 @@
             android:layout_height="wrap_content"
             android:layout_centerHorizontal="true"
             android:indeterminateTint="@color/colorPrimary"
-            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintBottom_toTopOf="@id/country_list_footer"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/country_list_appbar" />
+            app:layout_constraintTop_toBottomOf="@+id/country_list_toolbar" />
 
         <include
             android:id="@+id/country_list_footer"
@@ -64,6 +70,4 @@
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent" />
 
-    </androidx.constraintlayout.widget.ConstraintLayout>
-
-</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
